# sw-scraper

./: .gitignore  README.md  pyproject.toml
output/: people-out.csv
sw_scraper/: main.ipynb
sw_scraper/data/: people.csv
